# sudoku_recog

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: test.ipynb
sudoku_recog/: dataset.py  utils.py
